# ToonEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  scene.scene  vcpkg.json
.claude/: settings.local.json
assets/fonts/: OFL.txt
assets/shaders/: edge.frag  edge.vert  fullscreen.vert  grid.frag  model.frag  model.vert  outline.frag  outline.vert  shadow.frag  shadow.vert  sprite.frag  sprite.vert  toon.frag  triangle.frag  triangle.vert
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  overlay.cpp  overlay.h  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
src/core/: animation.h  animator.cpp  animator.h  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h  transform.cpp
src/core/input/: action_map.cpp  action_map.h  binding_io.cpp  binding_io.h  input_device.cpp  input_device.h  input_event.h  input_system.cpp  input_system.h  keycodes.h
src/scene/: camera.cpp  camera.h  model_loader.cpp  model_loader.h  scene.cpp  scene.h  serializer.cpp  serializer.h
src/ui/: file_browser.cpp  file_browser.h  file_filter.h  overlay.cpp  overlay.h  themes.cpp  themes.h  themes.md  thumbnail_cache.cpp  thumbnail_cache.h
